[package]
name = "mdbook-crate-links"
version = "0.1.0"
description = "An mdbook preprocessor that rewrites GitHub crate links to internal book links"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
keywords = ["devtools"]

[lints]
workspace = true

[dependencies]
mdbook-preprocessor = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
clap = { workspace = true, features = ["derive", "std"] }
