[package]
name = "rx_bevy"
version = "0.1.0"
description = "Reactive Extensions for the Bevy game engine"
readme = "readme.md"
publish = true

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = [
    "all_observables",
    "all_observers",
    "all_operators",
    "all_subjects",
    "compose",
    "pipe",
]
dev = ["rx_core/dev", "rx_core_traits/dev", "rx_core_testing/dev"]
debug = []
example = [
    "bevy/bevy_asset",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_gltf",
    "bevy/bevy_pbr",
    "bevy/bevy_picking",
    "bevy/bevy_render",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/tonemapping_luts",
    "bevy/x11",
    "debug",
    "dev",
    "reflect",
    "rx_core/example",
    "rx_core_traits/example",
    "rx_core_testing/example",
]
trace = ["rx_core/trace"]
pipe = ["rx_core/pipe"]
compose = ["rx_core/compose"]
reflect = []

# Bevy Observables
all_observables = [
    "all_core_observables",
    "observable_event",
    "observable_keyboard",
]
observable_event = ["dep:rx_bevy_observable_event"]
observable_keyboard = ["dep:rx_bevy_observable_keyboard"]
# Bevy Observers
all_observers = ["all_core_observers"]
# Bevy Operators
all_operators = ["all_core_operators"]
# Bevy Subjects
all_subjects = ["all_core_subjects"]
# Bevy Subscriptions
all_subscriptions = ["all_core_subscriptions"]

# Core Features
# Keep these in sync with `rx_core`'s features whenever a new feature of the
# following categories is added. To keep the same granular control over them.

# Enable Observable Creation Functions
observable_fn = ["rx_core/observable_fn"]
# Core Observables
all_core_observables = [
    "observable_combine_latest",
    "observable_connectable",
    "observable_deferred",
    "observable_iterator",
    "observable_iterator_on_tick",
    "observable_merge",
    "observable_of",
    "observable_throw",
    "observable_zip",
]
observable_combine_latest = ["rx_core/observable_combine_latest"]
observable_connectable = ["rx_core/observable_connectable"]
observable_deferred = ["rx_core/observable_deferred"]
observable_interval = ["rx_core/observable_interval"]
observable_iterator = ["rx_core/observable_iterator"]
observable_iterator_on_tick = ["rx_core/observable_iterator_on_tick"]
observable_merge = ["rx_core/observable_merge"]
observable_of = ["rx_core/observable_of"]
observable_throw = ["rx_core/observable_throw"]
observable_zip = ["rx_core/observable_zip"]
# Core Observers
all_core_observers = ["observer_noop", "observer_print", "observer_fn"]
observer_fn = ["rx_core/observer_fn"]
observer_noop = ["rx_core/observer_noop"]
observer_print = ["rx_core/observer_print"]
# Core Operators
all_core_operators = [
    "operator_adsr",
    "operator_composite",
    "operator_enumerate",
    "operator_filter",
    "operator_filter_map",
    "operator_finalize",
    "operator_identity",
    "operator_into_result",
    "operator_lift_option",
    "operator_lift_result",
    "operator_map",
    "operator_map_into",
    "operator_scan",
    "operator_skip",
    "operator_switch_map",
    "operator_take",
    "operator_tap",
]
operator_adsr = ["rx_core/operator_adsr"]
operator_composite = ["rx_core/operator_composite"]
operator_enumerate = ["rx_core/operator_enumerate"]
operator_filter = ["rx_core/operator_filter"]
operator_filter_map = ["rx_core/operator_filter_map"]
operator_finalize = ["rx_core/operator_finalize"]
operator_identity = ["rx_core/operator_identity"]
operator_into_result = ["rx_core/operator_into_result"]
operator_lift_option = ["rx_core/operator_lift_option"]
operator_lift_result = ["rx_core/operator_lift_result"]
operator_map = ["rx_core/operator_map"]
operator_map_into = ["rx_core/operator_map_into"]
operator_scan = ["rx_core/operator_scan"]
operator_skip = ["rx_core/operator_skip"]
operator_switch_map = ["rx_core/operator_switch_map"]
operator_take = ["rx_core/operator_take"]
operator_tap = ["rx_core/operator_tap_next"]
# Core Subjects
all_core_subjects = ["subject", "subject_behavior", "subject_replay"]
subject = ["rx_core/subject"]
subject_behavior = ["rx_core/subject_behavior"]
subject_replay = ["rx_core/subject_replay"]
# Core Subscriptions
all_core_subscriptions = ["subscription_drop", "subscription_inert"]
subscription_drop = ["rx_core/subscription_drop"]
subscription_inert = ["rx_core/subscription_inert"]

[dependencies]
rx_core = { workspace = true }
rx_core_traits = { workspace = true }
rx_bevy_context = { workspace = true }
rx_bevy_plugin = { workspace = true }
# Observables
rx_bevy_observable_keyboard = { workspace = true, optional = true }
rx_bevy_observable_event = { workspace = true, optional = true }

[dev-dependencies]
rx_core_testing = { workspace = true }
bevy = { workspace = true }
examples_common = { workspace = true }
bevy-inspector-egui = { workspace = true, features = ["bevy_render"] }
bevy_egui = { workspace = true }
disqualified = { workspace = true }
bevy_mod_alternate_system_on_press = { workspace = true }

[[example]]
name = "observable_gallery"
path = "examples/observable_gallery.rs"
required-features = ["example"]
