[package]
name = "rx_bevy"
version = "0.1.0"
description = "Reactive Extensions for the Bevy game engine"
readme = "../../readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = [
    "all_observables",
    "all_observers",
    "all_operators",
    "all_schedulers",
    "all_subjects",
    "compose",
    "pipe",
]
debug = [
    "rx_bevy_context/debug",
    "rx_bevy_observable_event?/debug",
    "rx_bevy_observable_keyboard?/debug",
    "rx_bevy_observable_message?/debug",
    "rx_bevy_observable_proxy?/debug",
    "rx_core/debug",
    "rx_core_testing/debug",
    "rx_core_traits/debug",
]
pipe = ["rx_core/pipe"]
compose = ["rx_core/compose"]
reflect = ["rx_bevy_context/reflect"]
test = []
example = [
    "bevy/dynamic_linking",
    "bevy/bevy_asset",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_gltf",
    "bevy/bevy_pbr",
    "bevy/bevy_picking",
    "bevy/bevy_render",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/tonemapping_luts",
    "bevy/x11",
]

# Bevy Observables
all_observables = [
    "all_core_observables",
    "observable_event",
    "observable_keyboard",
    "observable_message",
    "observable_proxy",
    "observable_resource",
]
observable_event = ["dep:rx_bevy_observable_event"]
observable_keyboard = ["dep:rx_bevy_observable_keyboard"]
observable_message = ["dep:rx_bevy_observable_message"]
observable_proxy = ["dep:rx_bevy_observable_proxy"]
observable_resource = ["dep:rx_bevy_observable_resource"]
# Bevy Observers
all_observers = ["all_core_observers"]
# Bevy Operators
all_operators = ["all_core_operators"]
# Bevy Schedulers (Generic schedulers from rx_core are not usable in Bevy)
all_schedulers = []
# Bevy Subjects
all_subjects = ["all_core_subjects"]

# Core Features
# Keep these in sync with `rx_core`'s features whenever a new feature of the
# following categories is added. To keep the same granular control over them.

# Enable Observable Creation Functions
observable_fn = ["rx_core/observable_fn"]
# Core Observables
all_core_observables = [
    "observable_closed",
    "observable_combine_changes",
    "observable_combine_latest",
    "observable_concat",
    "observable_connectable",
    "observable_deferred",
    "observable_empty",
    "observable_interval",
    "observable_iterator",
    "observable_iterator_on_tick",
    "observable_join",
    "observable_merge",
    "observable_never",
    "observable_of",
    "observable_throw",
    "observable_timer",
    "observable_zip",
]
observable_closed = ["rx_core/observable_closed"]
observable_combine_changes = ["rx_core/observable_combine_changes"]
observable_combine_latest = ["rx_core/observable_combine_latest"]
observable_concat = ["rx_core/observable_concat"]
observable_connectable = ["rx_core/observable_connectable"]
observable_deferred = ["rx_core/observable_deferred"]
observable_empty = ["rx_core/observable_empty"]
observable_interval = ["rx_core/observable_interval"]
observable_iterator = ["rx_core/observable_iterator"]
observable_iterator_on_tick = ["rx_core/observable_iterator_on_tick"]
observable_join = ["rx_core/observable_join"]
observable_merge = ["rx_core/observable_merge"]
observable_never = ["rx_core/observable_never"]
observable_of = ["rx_core/observable_of"]
observable_throw = ["rx_core/observable_throw"]
observable_timer = ["rx_core/observable_timer"]
observable_zip = ["rx_core/observable_zip"]
# Core Observers
all_core_observers = ["observer_noop", "observer_print", "observer_fn"]
observer_fn = ["rx_core/observer_fn"]
observer_noop = ["rx_core/observer_noop"]
observer_print = ["rx_core/observer_print"]
# Core Operators
all_core_operators = [
    "operator_adsr",
    "operator_buffer_count",
    "operator_composite",
    "operator_concat_all",
    "operator_concat_map",
    "operator_delay",
    "operator_dematerialize",
    "operator_end_with",
    "operator_enumerate",
    "operator_error_boundary",
    "operator_exhaust_all",
    "operator_exhaust_map",
    "operator_fallback_when_silent",
    "operator_filter",
    "operator_filter_map",
    "operator_finalize",
    "operator_find",
    "operator_find_index",
    "operator_first",
    "operator_identity",
    "operator_into_result",
    "operator_lift_option",
    "operator_lift_result",
    "operator_map",
    "operator_map_error",
    "operator_map_into",
    "operator_materialize",
    "operator_merge_all",
    "operator_merge_map",
    "operator_on_next",
    "operator_on_subscribe",
    "operator_reduce",
    "operator_retry",
    "operator_scan",
    "operator_share",
    "operator_skip",
    "operator_start_with",
    "operator_switch_all",
    "operator_switch_map",
    "operator_take",
    "operator_tap",
    "operator_tap_next",
]
operator_adsr = ["rx_core/operator_adsr"]
operator_buffer_count = ["rx_core/operator_buffer_count"]
operator_composite = ["rx_core/operator_composite"]
operator_concat_all = ["rx_core/operator_concat_all"]
operator_concat_map = ["rx_core/operator_concat_map"]
operator_delay = ["rx_core/operator_delay"]
operator_dematerialize = ["rx_core/operator_dematerialize"]
operator_end_with = ["rx_core/operator_end_with"]
operator_enumerate = ["rx_core/operator_enumerate"]
operator_error_boundary = ["rx_core/operator_error_boundary"]
operator_exhaust_all = ["rx_core/operator_exhaust_all"]
operator_exhaust_map = ["rx_core/operator_exhaust_map"]
operator_fallback_when_silent = ["rx_core/operator_fallback_when_silent"]
operator_filter = ["rx_core/operator_filter"]
operator_filter_map = ["rx_core/operator_filter_map"]
operator_finalize = ["rx_core/operator_finalize"]
operator_find = ["rx_core/operator_find"]
operator_find_index = ["rx_core/operator_find_index"]
operator_first = ["rx_core/operator_first"]
operator_identity = ["rx_core/operator_identity"]
operator_into_result = ["rx_core/operator_into_result"]
operator_lift_option = ["rx_core/operator_lift_option"]
operator_lift_result = ["rx_core/operator_lift_result"]
operator_map = ["rx_core/operator_map"]
operator_map_error = ["rx_core/operator_map_error"]
operator_map_into = ["rx_core/operator_map_into"]
operator_materialize = ["rx_core/operator_materialize"]
operator_merge_all = ["rx_core/operator_merge_all"]
operator_merge_map = ["rx_core/operator_merge_map"]
operator_on_next = ["rx_core/operator_on_next"]
operator_on_subscribe = ["rx_core/operator_on_subscribe"]
operator_reduce = ["rx_core/operator_reduce"]
operator_retry = ["rx_core/operator_retry"]
operator_scan = ["rx_core/operator_scan"]
operator_share = ["rx_core/operator_share"]
operator_skip = ["rx_core/operator_skip"]
operator_start_with = ["rx_core/operator_start_with"]
operator_switch_all = ["rx_core/operator_switch_all"]
operator_switch_map = ["rx_core/operator_switch_map"]
operator_take = ["rx_core/operator_take"]
operator_tap = ["rx_core/operator_tap"]
operator_tap_next = ["rx_core/operator_tap_next"]
# Core Subjects
all_core_subjects = [
    "subject_async",
    "subject_behavior",
    "subject_provenance",
    "subject_publish",
    "subject_replay",
]
subject_async = ["rx_core/subject_async"]
subject_behavior = ["rx_core/subject_behavior"]
subject_provenance = ["rx_core/subject_provenance"]
subject_publish = ["rx_core/subject_publish"]
subject_replay = ["rx_core/subject_replay"]

[dependencies]
rx_core = { workspace = true }
rx_core_traits = { workspace = true }
rx_bevy_context = { workspace = true }
# Observables
rx_bevy_observable_event = { workspace = true, optional = true }
rx_bevy_observable_keyboard = { workspace = true, optional = true }
rx_bevy_observable_message = { workspace = true, optional = true }
rx_bevy_observable_proxy = { workspace = true, optional = true }
rx_bevy_observable_resource = { workspace = true, optional = true }

[dev-dependencies]
rx_core_testing = { workspace = true }
bevy = { workspace = true }
examples_common = { workspace = true }
bevy-inspector-egui = { workspace = true, features = ["bevy_render"] }
bevy_egui = { workspace = true }
disqualified = { workspace = true }
bevy_mod_alternate_system_on_press = { workspace = true }

[[example]]
name = "observable_gallery"
path = "examples/observable_gallery.rs"
required-features = ["example"]
