[package]
name = "rx_bevy_common"
description = "rx_bevy allocation context"
version = "0.1.0"
readme = "readme.md"
publish = true

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
keywords = ["rx", "reactivex", "rx_core", "rx_bevy"]

[lints]
workspace = true

[features]
default = []

[dependencies]
rx_core_common = { version = "0.1.0", path = "../rx_core_common" }
rx_core_scheduler_ticking = { version = "0.1.0", path = "../rx_core_scheduler_ticking" }
rx_core_macro_executor_derive = { version = "0.1.0", path = "../rx_core_macro_executor_derive" }
rx_core_macro_observable_derive = { version = "0.1.0", path = "../rx_core_macro_observable_derive" }
rx_core_macro_observer_derive = { version = "0.1.0", path = "../rx_core_macro_observer_derive" }
rx_core_macro_scheduler_derive = { version = "0.1.0", path = "../rx_core_macro_scheduler_derive" }
rx_core_macro_subject_derive = { version = "0.1.0", path = "../rx_core_macro_subject_derive" }
rx_core_macro_subscription_derive = { version = "0.1.0", path = "../rx_core_macro_subscription_derive" }
rx_core_macro_work_derive = { version = "0.1.0", path = "../rx_core_macro_work_derive" }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_log = { workspace = true }
bevy_time = { workspace = true }
bevy_derive = { workspace = true }
bevy_window = { workspace = true }
disqualified = { workspace = true }
derive-where = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }

rx_core_testing = { version = "0.1.0", path = "../rx_core_testing" }
