[package]
name = "rx_bevy_common_bounds"
description = "rx_bevy"
version = "0.1.0"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = ["dev"]
dev = []
debug = []
serialize = ["dep:serde"]
reflect = ["dep:bevy_reflect"]

[dependencies]
serde = { workspace = true, optional = true }
# bevy dependencies
bevy_reflect = { workspace = true, optional = true }
