[package]
name = "rx_bevy_context"
description = "rx_bevy allocation context"
version = "0.1.0"
readme = "readme.md"
publish = true

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["dev", "debug"]
dev = [
    "bevy/dynamic_linking",
    "rx_bevy/dev",
    "rx_core_traits/dev",
    "rx_core_testing/dev",
]
debug = ["rx_core_traits/debug", "dep:bevy_input"]
example = [
    "bevy/bevy_asset",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_gltf",
    "bevy/bevy_pbr",
    "bevy/bevy_picking",
    "bevy/bevy_render",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/tonemapping_luts",
    "bevy/x11",
    "debug",
    "dev",
    "rx_bevy/example",
    "rx_core_traits/example",
    "rx_core_testing/example",
]
dev_panic_on_dropped_active_subscriptions = [
    "rx_core_traits/dev_panic_on_dropped_active_subscriptions",
]
reflect = ["dep:bevy_reflect"]

[dependencies]
# TODO: disable default features in all dependencies
rx_core_traits = { workspace = true }
rx_core_macro_observable_derive = { workspace = true }
rx_core_macro_observer_derive = { workspace = true }
rx_core_macro_subscriber_derive = { workspace = true }
rx_core_macro_subject_derive = { workspace = true }
rx_bevy_common = { workspace = true }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_log = { workspace = true }
bevy_time = { workspace = true }
bevy_derive = { workspace = true }
bevy_input = { workspace = true, optional = true }
bevy_reflect = { workspace = true, optional = true }
bevy_window = { workspace = true }
smallvec = { workspace = true }
disqualified = { workspace = true }
derive-where = { workspace = true }
thiserror = { workspace = true }
stealcell = { workspace = true }
bevy_mod_erased_component_registry = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }
rx_bevy = { workspace = true }
rx_core_testing = { workspace = true }
