[package]
name = "rx_bevy_context_command"
description = "Commands context for bevy specific subscribers that use commands"
version = "0.1.0"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = []
dev = ["rx_bevy/dev", "rx_bevy_core/dev", "rx_bevy_testing/dev"]
example = [
    "dev",
    "rx_bevy/example",
    "rx_bevy_core/example",
    "rx_bevy_testing/example",
]

[dependencies]
rx_bevy_core = { workspace = true, features = ["bevy"] }
bevy_ecs = { workspace = true }
short_type_name = { workspace = true }

[dev-dependencies]
rx_bevy = { workspace = true, features = ["bevy"] }
rx_bevy_testing = { workspace = true, features = ["bevy"] }
bevy = { workspace = true }
