[package]
name = "rx_bevy_core"
version = "0.1.0"
description = "rx_bevy's core observable implementation"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = []
dev = ["rx_bevy/dev", "rx_bevy_common_bounds/dev", "rx_bevy_testing/dev"]
example = ["dev", "rx_bevy/example", "rx_bevy_testing/example"]
bevy = [
    "tick",
    "dep:bevy_ecs",
    "dep:bevy_time",
    "rx_bevy/bevy",
    "rx_bevy_testing/bevy",
]
tick = ["rx_bevy/tick", "rx_bevy_testing/tick"]
serialize = ["rx_bevy_common_bounds/serialize"]
debug = ["rx_bevy_common_bounds/debug"]
reflect = [
    "dep:bevy_reflect",
    "rx_bevy/reflect",
    "rx_bevy_common_bounds/reflect",
    "rx_bevy_testing/reflect",
]

[dependencies]
smallvec = { workspace = true }
rx_bevy_common_bounds = { workspace = true }
bevy_reflect = { workspace = true, optional = true }
bevy_ecs = { workspace = true, optional = true }
bevy_time = { workspace = true, optional = true }

[dev-dependencies]
rx_bevy = { workspace = true }
rx_bevy_testing = { workspace = true }
