[package]
name = "rx_bevy_ecs_observable_interval"
description = "rx_bevy interval observable"
version = "0.1.0"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = ["dev", "reflect", "debug"]
dev = ["bevy/dynamic_linking"]
debug = ["bevy/track_location"]
example = [
    "dev",
    "debug",
    "reflect",
    "bevy/bevy_scene",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_asset",
    "bevy/bevy_render",
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/bevy_picking",
    "bevy/x11",
    "bevy/tonemapping_luts",
]
reflect = [
    "dep:bevy_reflect",
    "rx_bevy_plugin/reflect",
    "rx_bevy_observable/reflect",
]

[dependencies]
rx_bevy_plugin = { workspace = true }
bevy_time = { workspace = true }
rx_bevy_observable = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true, optional = true }

[dev-dependencies]
bevy = { workspace = true }
rx_bevy = { workspace = true, features = ["bevy", "reflect", "tick"] }
rx_bevy_testing = { workspace = true, features = ["tick"] }
examples_common = { workspace = true }
