[package]
name = "rx_bevy_higher_order_operator"
description = "rx_bevy's operator implementation"
version = "0.1.0"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = ["dev"]
dev = []
example = ["dev"]

[dependencies]
rx_bevy_observable = { workspace = true }
rx_bevy_operator_identity = { workspace = true }
rx_bevy_observer_noop = { workspace = true }
rx_bevy_operator_pipe = { workspace = true }
rx_bevy_operator = { workspace = true }
rx_bevy_subject = { workspace = true }

[dev-dependencies]
rx_bevy = { workspace = true }
rx_bevy_testing = { workspace = true }
