[package]
name = "rx_bevy_observable"
version = "0.1.0"
description = "rx_bevy's core observable implementation"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = ["dev"]
dev = []
example = ["dev"]
inline_subscribe = []

[dependencies]

[dev-dependencies]
rx_bevy = { workspace = true }
rx_bevy_testing = { workspace = true }
