[package]
name = "rx_bevy_observable"
version = "0.1.0"
description = "rx_bevy's core observable implementation"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = []
dev = []
example = ["dev"]
bevy = ["tick", "dep:bevy_ecs", "dep:bevy_time"]
tick = []
serialize = ["rx_bevy_common_bounds/serialize"]
debug = ["rx_bevy_common_bounds/debug"]
reflect = ["dep:bevy_reflect", "rx_bevy_common_bounds/reflect"]

[dependencies]
smallvec = { workspace = true }
rx_bevy_common_bounds = { workspace = true }
bevy_reflect = { workspace = true, optional = true }
bevy_ecs = { workspace = true, optional = true }
bevy_time = { workspace = true, optional = true }

[dev-dependencies]
rx_bevy = { workspace = true }
rx_bevy_testing = { workspace = true }
