[package]
name = "rx_bevy_observable_combine_latest"
description = "combine_latest observable for rx_bevy"
version = "0.1.0"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = ["dev", "tick"]
dev = []
example = ["dev"]
inline_subscribe = []
tick = ["rx_bevy_observable/tick", "rx_bevy_emission_variants/tick"]

[dependencies]
rx_bevy_observable = { workspace = true }
rx_bevy_emission_variants = { workspace = true }

[dev-dependencies]
rx_bevy = { workspace = true }
rx_bevy_testing = { workspace = true }
