[package]
name = "rx_bevy_observable_deferred"
description = "deferred observable for rx_bevy"
version = "0.1.0"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = ["dev"]
dev = [
    "rx_bevy/dev",
    "rx_bevy_common_bounds/dev",
    "rx_bevy_core/dev",
    "rx_bevy_testing/dev",
]
example = [
    "dev",
    "rx_bevy/example",
    "rx_bevy_core/example",
    "rx_bevy_testing/example",
]
reflect = [
    "dep:bevy_reflect",
    "rx_bevy/reflect",
    "rx_bevy_common_bounds/reflect",
    "rx_bevy_core/reflect",
]
bevy = ["rx_bevy_core/bevy", "rx_bevy/bevy", "rx_bevy_testing/bevy"]

[dependencies]
rx_bevy_core = { workspace = true }
rx_bevy_common_bounds = { workspace = true }
rx_bevy_subscription_drop = { workspace = true }
bevy_reflect = { workspace = true, optional = true }

[dev-dependencies]
rx_bevy = { workspace = true }
rx_bevy_testing = { workspace = true }
