[package]
name = "rx_bevy_observable_interval"
description = "rx_bevy interval observable"
version = "0.1.0"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = ["dev", "reflect", "debug"]
dev = [
    "examples_common/dev",
    "rx_bevy/dev",
    "rx_bevy_core/dev",
    "rx_bevy_testing/dev",
]
debug = ["rx_bevy_core/debug"]
example = [
    "debug",
    "dev",
    "reflect",
    "rx_bevy/example",
    "rx_bevy_core/example",
    "rx_bevy_testing/example",
]
reflect = ["dep:bevy_reflect", "rx_bevy/reflect", "rx_bevy_core/reflect"]

[dependencies]
rx_bevy_core = { workspace = true }
bevy_time = { workspace = true }
bevy_reflect = { workspace = true, optional = true }

[dev-dependencies]
bevy = { workspace = true }
rx_bevy = { workspace = true, features = ["bevy"] }
rx_bevy_testing = { workspace = true, features = ["bevy"] }
examples_common = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_egui = { workspace = true }
