[package]
name = "rx_bevy_observable_keyboard"
description = "rx_bevy keyboard observable"
version = "0.1.0"
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
debug = [
    "bevy/track_location",
    "examples_common/debug",
    "rx_bevy_common/debug",
    "rx_core_testing/debug",
    "rx_core_common/debug",
]
example = [
    "bevy/dynamic_linking",
    "bevy/bevy_asset",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_gltf",
    "bevy/bevy_pbr",
    "bevy/bevy_picking",
    "bevy/bevy_render",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/tonemapping_luts",
    "bevy/x11",
]

[dependencies]
rx_core_common = { workspace = true }
rx_core_macro_observable_derive = { workspace = true }
rx_core_macro_subscription_derive = { workspace = true }
rx_bevy_common = { workspace = true }
bevy_input = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }
rx_bevy = { workspace = true, default-features = true }
rx_core_testing = { workspace = true }
examples_common = { workspace = true }
bevy-inspector-egui = { workspace = true, features = ["bevy_render"] }
bevy_egui = { workspace = true }

[[example]]
name = "observable_keyboard_example"
path = "examples/observable_keyboard_example.rs"
required-features = ["example"]
